<resources>
    <string name="app_name">Tienda</string>

    <string name="action_login">Iniciar sesión</string>
    <string name="action_register">Regístrate</string>
    <string name="action_doregister">Registrarme</string>
    <string name="action_resetpswd">Recuperar contraseña</string>
    <string name="action_settings">Opciones</string>
    <string name="action_search">Buscar</string>

    <string name="action_cart_add">Agregar al carro</string>
    <string name="action_cart_remove">Eliminar del carro</string>

    <string name="action_fav_add">Agregar a mis favoritos</string>
    <string name="action_fav_remove">Eliminar de mis favoritos</string>

    <string name="user_data_nombre">Nombre</string>
    <string name="user_data_edad">Edad</string>
    <string name="user_data_genero">Género</string>
    <string name="user_data_username">Correo electrónico</string>
    <string name="user_data_password">Contraseña</string>

    <string-array name="options_genero">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string-array name="example_products">
        <item>Secador</item>
        <item>Silla</item>
        <item>Auto</item>
        <item>Licuadora</item>
        <item>Laptop</item>
        <item>Sombrero</item>
    </string-array>

    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</string>

</resources>
